--- a/jobs/jobs.csproj
+++ b/jobs/jobs.csproj
@@ -144,6 +144,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Columna.cs" />
+    <Compile Include="Models\Leds.cs" />
+    <Compile Include="Models\Nave.cs" />
+    <Compile Include="Models\Sector.cs" />
     <Compile Include="Models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -199,6 +203,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Mantenedor\CreateUser.cshtml" />
+    <Content Include="Views\Mantenedor\CreateSector.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
