Vista para plasmar datos de BD

--- a/jobs/jobs.csproj
+++ b/jobs/jobs.csproj
@@ -199,11 +199,9 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Mantenedor\CreateUser.cshtml" />
     <Content Include="Views\Mantenedor\CreateSector.cshtml" />
+    <Content Include="Views\Mantenedor\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
