--- a/jobs/Web.config
+++ b/jobs/Web.config
@@ -9,6 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="keyAPI" value="jvvMEAlj2bdHwVFj83iX45qRECF04YP9KUlfqnl1" />
+	<add key="DBUrl" value="https://prueba-repuesto-default-rtdb.firebaseio.com/" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
