Controlador de editar y eliminar sector

--- a/jobs/jobs.csproj
+++ b/jobs/jobs.csproj
@@ -139,7 +139,6 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MantenedorController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -202,6 +201,7 @@
     <Content Include="Views\Mantenedor\CreateUser.cshtml" />
     <Content Include="Views\Mantenedor\CreateSector.cshtml" />
     <Content Include="Views\Mantenedor\Index.cshtml" />
+    <Content Include="Views\Mantenedor\UpdateSector.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
