Por jquery se carga el dropdown de sector y una vez seleccionado carga el dropdown de sus naves

--- a/jobs/jobs.csproj
+++ b/jobs/jobs.csproj
@@ -186,6 +186,7 @@
     <Content Include="Views\Mantenedor\Inicio.cshtml" />
     <Content Include="Views\Mantenedor\NaveLeds.cshtml" />
     <Content Include="Views\Mantenedor\GetNavigationItems.cshtml" />
+    <Content Include="Views\Shared\DisplayNave.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
