armado de columnas para representacion grafica despues de buscar por sector y nave

--- a/jobs/jobs.csproj
+++ b/jobs/jobs.csproj
@@ -187,6 +187,7 @@
     <Content Include="Views\Mantenedor\NaveLeds.cshtml" />
     <Content Include="Views\Mantenedor\GetNavigationItems.cshtml" />
     <Content Include="Views\Shared\DisplayNave.cshtml" />
+    <Content Include="Views\Shared\columnaLeds.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
